# ai-project-setup

./: .ai  .flake8  .gitignore  .npmignore  ACKNOWLEDGEMENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  package.json  pyproject.toml
.github/workflows/: lint.yml  release.yml  test.yml
src/ai_project/: __init__.py  cli.py
src/ai_project/compression/: __init__.py  detect.py
src/ai_project/config/: __init__.py  env.py
src/ai_project/hooks/: __init__.py  aiproject-activate.js
src/ai_project/utils/: __init__.py
src/ai_project/validators/: __init__.py
tests/e2e/: __init__.py  test_e2e.py
tests/integration/: test_cli.py  test_compression.py
tests/unit/: test_config.py  test_detect.py  test_hooks.py  test_utils.py  test_validators.py
